--- a/angular_vmesnik/src/app/app.component.html
+++ b/angular_vmesnik/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-all-problems-page></app-all-problems-page>
+<!--<app-all-problems-page></app-all-problems-page>-->
+<body>
+  <router-outlet></router-outlet>
+</body>
