--- a/angular_vmesnik/src/app/components/new-problem-page/new-problem-page.component.html
+++ b/angular_vmesnik/src/app/components/new-problem-page/new-problem-page.component.html
@@ -1,1 +1,25 @@
-<p>new-problem-page works!</p>
+<div class="container">
+  <h1 class="heading">Create your own game</h1>
+  <div class="buttonsAndProblemBox-container">
+    <div class="buttons">
+      <div class="choose_problem_buttons">
+        <button
+          class="nxnBtn"
+          *ngFor="let i of [3, 4, 5, 6, 7, 8]; let index = index"
+          (click)="generateNxNMatrix(i)"
+        >
+          {{ i }}x{{ i }}
+        </button>
+      </div>
+      <button class="resetBtn" (click)="generateNxNMatrix(n)">Reset</button>
+      <button class="submitBtn">Submit</button>
+    </div>
+    <div class="create_problem_box">
+      <app-problem-nxn
+        [matrix]="newMatrix"
+        [showGetSolutionBtn]="false"
+        [createNewProblem]="true"
+      ></app-problem-nxn>
+    </div>
+  </div>
+</div>
