--- a/angular_vmesnik/src/app/components/problem-nxn/problem-nxn.component.css
+++ b/angular_vmesnik/src/app/components/problem-nxn/problem-nxn.component.css
@@ -1,4 +1,3 @@
-
 .problem_box {
   display: grid;
   justify-content: center;
@@ -20,7 +19,7 @@
   border-style: solid;
   justify-content: center;
   align-items: center;
-  border-color: #0D1C2C;
+  border-color: #0d1c2c;
   background: #4695eb;
 }
 
@@ -30,4 +29,16 @@
   background: #8d0081;
   width: 10px;
   height: 10px;
+}
+
+.problemBoxAndButton-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+button {
+  background-image: linear-gradient(30deg, #00ff2a, #4ce3f7);
 }
