Set reset buttons

--- a/angular_vmesnik/src/app/components/all-problems-page/all-problems-page.component.html
+++ b/angular_vmesnik/src/app/components/all-problems-page/all-problems-page.component.html
@@ -3,7 +3,7 @@
     <h1 class="heading">All problems. Choose one</h1>
     <div class="buttons">
       <button class="createBtn" routerLink="/create-problem">create</button>
-      <button class="resetBtn">reset</button>
+      <button class="resetBtn" (click)="setProblemMatrices()">reset</button>
     </div>
   </div>
   <div class="all_problems_box">
